--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.1",
     "@langchain/core": "^0.3.27",
     "@langchain/langgraph": "^0.2.38",
     "@langchain/openai": "^0.3.16",
+    "@remix-run/serve": "^2.14.0",
+    "axios": "^1.6.0",
     "dotenv": "^16.4.7",
+    "express": "^4.18.1",
     "mongodb": "^6.12.0",
     "openai": "^4.77.3"
   },
@@ -22,15 +23,19 @@
     "@nx/jest": "20.3.0",
     "@nx/js": "20.3.0",
     "@nx/node": "20.3.0",
+    "@nx/remix": "^20.3.0",
     "@nx/web": "20.3.0",
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@remix-run/dev": "^2.14.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
+    "@types/mongodb": "^4.0.6",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -44,8 +49,6 @@
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
-    "webpack-cli": "^5.1.4",
-    "@types/mongodb": "^4.0.6",
-    "@types/dotenv": "^6.1.1"
+    "webpack-cli": "^5.1.4"
   }
 }
