--- a/package.json
+++ b/package.json
@@ -8,38 +8,55 @@
     "@langchain/core": "^0.3.27",
     "@langchain/langgraph": "^0.2.38",
     "@langchain/openai": "^0.3.16",
+    "@remix-run/node": "^2.14.0",
+    "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.14.0",
     "axios": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
+    "isbot": "^4.4.0",
     "mongodb": "^6.12.0",
-    "openai": "^4.77.3"
+    "openai": "^4.77.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nx/devkit": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
     "@nx/express": "20.3.0",
     "@nx/jest": "20.3.0",
     "@nx/js": "20.3.0",
     "@nx/node": "20.3.0",
+    "@nx/playwright": "20.3.0",
     "@nx/remix": "^20.3.0",
+    "@nx/vite": "20.3.0",
     "@nx/web": "20.3.0",
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
+    "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@remix-run/dev": "^2.14.0",
+    "@remix-run/testing": "^2.14.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
     "@types/mongodb": "^4.0.6",
     "@types/node": "~18.16.9",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "nx": "20.3.0",
     "prettier": "^2.6.2",
@@ -49,6 +66,7 @@
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
+    "vite": "^5.0.0",
     "webpack-cli": "^5.1.4"
   }
 }
