--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@remix-run/node": "^2.14.0",
     "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.14.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "isbot": "^4.4.0",
     "mongodb": "^6.12.0",
     "openai": "^4.77.3",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
