--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@langchain/core": "^0.3.27",
     "@langchain/langgraph": "^0.2.38",
     "@langchain/openai": "^0.3.16",
+    "@nextui-org/react": "^2.6.11",
     "@remix-run/node": "^2.14.0",
     "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.14.0",
@@ -15,6 +16,7 @@
     "axios": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.1",
+    "framer-motion": "^11.16.0",
     "isbot": "^4.4.0",
     "mongodb": "^6.12.0",
     "openai": "^4.77.3",
