--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,30 @@ services:
     environment:
       - API_URL=http://sznportal_api:3333/search 
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro                
+      - ./nginx/api_key_map.conf:/etc/nginx/conf.d/api_key_map.conf:ro  
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro    
+      - ./certbot/conf:/etc/letsencrypt                          
+      - ./certbot/www:/var/www/certbot                           
+    depends_on:
+      - fastapi-app
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email johngoyason@gmail.com -d schnauzenportal.de --agree-tos
+
 networks:
   sznportal_network:
     driver: bridge
