undate nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,14 +13,14 @@ server {
 server {
     listen 443 ssl http2;
 
-    ssl_certificate     /etc/letsencrypt/live/pet-query-api.b3ning.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/pet-query-api.b3ning.com/privkey.pem;
-    server_name pet-query-api.b3ning.com;
+    ssl_certificate     /etc/letsencrypt/live/schnauzenportal.de/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/schnauzenportal.de /privkey.pem;
+    server_name schnauzenportal.de;
 
     location / {
-        if ($valid_api_key = 0) {
-            return 403;                   
-        }
+        # if ($valid_api_key = 0) {
+        #     return 403;                   
+        # }
 
         proxy_pass http://sznportal_web:3000;
         proxy_set_header Host $host;
