--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - ./certbot/conf:/etc/letsencrypt                          
       - ./certbot/www:/var/www/certbot                           
     depends_on:
-      - fastapi-app
+      - sznportal_web
 
   certbot:
     image: certbot/certbot
