--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   api:
     build:
@@ -39,7 +37,7 @@ services:
       - ./certbot/conf:/etc/letsencrypt                          
       - ./certbot/www:/var/www/certbot                           
     depends_on:
-      - sznportal_web
+      - web
 
   certbot:
     image: certbot/certbot
