--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro                
-      - ./nginx/api_key_map.conf:/etc/nginx/conf.d/api_key_map.conf:ro  
+      # - ./nginx/api_key_map.conf:/etc/nginx/conf.d/api_key_map.conf:ro  
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro    
       - ./certbot/conf:/etc/letsencrypt                          
       - ./certbot/www:/var/www/certbot                           
