update nginx conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,26 +10,26 @@ server {
     # return 301 https://$host$request_uri;
 }
 
-server {
-    listen 443 ssl http2;
+# server {
+#     listen 443 ssl http2;
 
-    ssl_certificate     /etc/letsencrypt/live/schnauzenportal.de/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/schnauzenportal.de /privkey.pem;
-    server_name schnauzenportal.de;
+#     ssl_certificate     /etc/letsencrypt/live/schnauzenportal.de/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/schnauzenportal.de /privkey.pem;
+#     server_name schnauzenportal.de;
 
-    location / {
+#     location / {
         # if ($valid_api_key = 0) {
         #     return 403;                   
         # }
 
-        proxy_pass http://sznportal_web:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+#         proxy_pass http://sznportal_web:3000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
 
-    location ~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-}
+#     location ~ /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+# }
