--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,7 +22,7 @@ server {
         #     return 403;                   
         # }
 
-        proxy_pass http://sznportal_web:3000;
+        proxy_pass http://web:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
