--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - ./certbot/www:/var/www/certbot                           
     depends_on:
       - web
+    networks:
+      - sznportal_network  
 
   certbot:
     image: certbot/certbot
