--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.api
-    # container_name: sznportal_api
     env_file:
       - .env # Load environment variables from the .env file
     ports:
@@ -15,7 +14,6 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.web
-    # container_name: sznportal_web
     ports:
       - "3000:3000" # Expose the web app on port 3000
     networks:
@@ -32,7 +30,6 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro                
-      # - ./nginx/api_key_map.conf:/etc/nginx/conf.d/api_key_map.conf:ro  
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro    
       - ./certbot/conf:/etc/letsencrypt                          
       - ./certbot/www:/var/www/certbot                           
@@ -47,7 +44,8 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email johngoyason@gmail.com -d schnauzenportal.de --agree-tos
+    #command: certonly --webroot -w /var/www/certbot --force-renewal --email johngoyason@gmail.com -d schnauzenportal.de --agree-tos
+    command: renew --webroot -w /var/www/certbot --quiet
 
 networks:
   sznportal_network:
