--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,6 +17,11 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/schnauzenportal.de/privkey.pem;
     server_name schnauzenportal.de;
 
+    # Block access to .env files
+    location ~ /\.env {
+        deny all;
+    }
+
     location / {
         proxy_pass http://web:3000;
         proxy_set_header Host $host;
