update nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,7 +19,7 @@ server {
 
     # Block access to .env files
     location ~ /\.env {
-        deny all;
+        return 404;
     }
 
     location / {
