--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve:api": "npx nx run api:serve --configuration=development",
-    "serve:web": "npx nx run web:dev"
+    "api:serve": "npx nx run api:serve --configuration=development",
+    "web:serve": "npx nx run web:dev",
+    "api:e2e": "npx nx run api-e2e:e2e ",
+    "api:test": "npx nx run api:test"
   },
   "private": true,
   "dependencies": {
