--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,8 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    # command: certonly --webroot -w /var/www/certbot --force-renewal --email johngoyason@gmail.com -d schnauzenportal.de --agree-tos
-    command: renew --webroot -w /var/www/certbot --quiet
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email johngoyason@gmail.com -d petquery.b3ning.com --agree-tos
+    # command: renew --webroot -w /var/www/certbot --quiet
 
 networks:
   sznportal_network:
