--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,11 +13,10 @@ server {
 server {
     listen 443 ssl http2;
 
-    ssl_certificate     /etc/letsencrypt/live/schnauzenportal.de/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/schnauzenportal.de/privkey.pem;
-    server_name schnauzenportal.de;
+    ssl_certificate     /etc/letsencrypt/live/petquery.b3ning.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/petquery.b3ning.com/privkey.pem;
+    server_name petquery.b3ning.com;
 
-    # Block access to .env files
     location ~ /\.env {
         return 404;
     }
