--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 18 # Adjust if needed
+          node-version: 20 # Upgraded to Node.js 20
           cache: 'npm'
 
       - name: Install dependencies
