--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run frontend tests
+      - name: Run web tests
         run: npm run web:test
